--- a/.env
+++ b/.env
@@ -44,14 +44,27 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+#Descomentar para uso en local y pruebas con Mailosaur
+#MAIL_MAILER=smtp
+#MAIL_HOST=smtp.mailosaur.net
+#MAIL_PORT=587
+#MAIL_USERNAME=
+#MAIL_PASSWORD=
+#MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=
+#MAIL_FROM_NAME="${APP_NAME}"
+#Comentar para uso en web
+
+#Descomentar para uso en web
+MAIL_MAILER=smtp 
+MAIL_HOST=smtp.hostinger.com 
+MAIL_PORT=465
+MAIL_USERNAME=hacem@miproyecto.xyz 
+MAIL_PASSWORD=Hacem_2024 
+MAIL_ENCRYPTION=ssl 
+MAIL_FROM_ADDRESS=hacem@miproyecto.xyz 
+MAIL_FROM_NAME="H.A.C.E.M."
+#Comentar para uso en local
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
